<resources>
    <string name="app_name">Adhan</string>
    <string name="title_main_activity">Adhan</string>
    <string name="titlePrayerTimes"> مواقيت الصلاة</string>
    <string name="salatSob7">صلاة الفجْر</string>
    <string name="salatDohr">صلاة الظُّهْر</string>
    <string name="salat3asr">صلاة العَصر</string>
    <string name="salatMaghreb">صلاة المَغرب</string>
    <string name="salatAishaa">صلاة العِشاء</string>
    <string name="snooze">إيقاف</string>
    <string name="title_notification"></string>
    <string name="text_notification"> حان الآن موعد آذان </string>
    <string name="place">"أنت متواجد في بلدية : "</string>
    <string name="notifications">تفعيل التنبيهات  :</string>
    <string name="home">المواقيت</string>
    <string name="audio">المؤذن</string>
    <string name="map">الموقع</string>
    <string name="settings">الأعدادات</string>
    <string name="choose">اختار</string>
    <string name="confirm">تأكيد</string>
    <string name="SearchGPS">البحث بواسطة GPS</string>
    <string name="Location">الموقع</string>
    <string name="confirmLanguage">تأكيد</string>
    <string name="Default">إفتراضي</string>
    <string name="theme1">أخضر</string>
    <string name="theme2">زمردي</string>
    <string-array name="languages_array">
        <item>العربية</item>
        <item>الإنجليزية</item>
    </string-array>
</resources>