<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PrayerTimesFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="75dp"
        app:cardCornerRadius="15dp"
        android:elevation="5dp"
        app:cardBackgroundColor="@color/colorAccent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/titlePrayerTimes"
                    android:text="@string/titlePrayerTimes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:layout_weight="1">

                </TextView>
                <ImageView
                    android:id="@+id/imagePrayerTimes"
                    android:layout_weight="2"
                    android:layout_margin="15dp"
                    android:src="@drawable/ic_mawa9it"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>
            <LinearLayout
                android:layout_weight="6"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/salat1"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="match_parent"></TextView>
                    <TextView
                        android:text="@string/salatSob7"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:layout_weight="1.5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></TextView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="6"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/salat2"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="match_parent"></TextView>
                    <TextView
                        android:text="@string/salatDohr"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:layout_weight="1.5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></TextView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="6"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/salat3"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="match_parent"></TextView>
                    <TextView
                        android:text="@string/salat3asr"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:layout_weight="1.5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></TextView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="6"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/salat4"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="match_parent"></TextView>
                    <TextView
                        android:text="@string/salatMaghreb"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:layout_weight="1.5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></TextView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="6"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/salat5"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="match_parent"></TextView>
                    <TextView
                        android:text="@string/salatAishaa"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:layout_weight="1.5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></TextView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</FrameLayout>