<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingsFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.8"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.4"
        android:id="@+id/languageCard"
        app:cardBackgroundColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/themeCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <Spinner
                android:id="@+id/spinner"
                android:layout_marginVertical="15dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </Spinner>
            <com.google.android.material.button.MaterialButton
                android:layout_weight="1"
                android:id="@+id/confirmLanguage"
                android:text="@string/confirmLanguage"
                android:layout_marginVertical="15dp"
                android:layout_marginHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></com.google.android.material.button.MaterialButton>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/themeCard"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.8"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/languageCard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardBackgroundColor="@android:color/white"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:paddingVertical="25dp"
            android:orientation="horizontal">
                <RadioGroup
                    android:id="@+id/chooseTheme"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <RadioButton
                        android:id="@+id/radioDefault"
                        android:layout_margin="5dp"
                        android:button="@android:color/transparent"
                        android:background="@drawable/radio_selector"
                        android:textColor="@drawable/color_selector"
                        android:elevation="2dp"
                        android:text="@string/Default"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </RadioButton>
                    <RadioButton
                        android:id="@+id/radioTheme1"
                        android:layout_margin="5dp"
                        android:button="@android:color/transparent"
                        android:background="@drawable/radio_selector"
                        android:textColor="@drawable/color_selector"
                        android:elevation="2dp"
                        android:text="@string/theme1"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </RadioButton>
                    <RadioButton
                        android:id="@+id/radioTheme2"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:button="@android:color/transparent"
                        android:background="@drawable/radio_selector"
                        android:textColor="@drawable/color_selector"
                        android:elevation="2dp"
                        android:text="@string/theme2"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </RadioButton>
                </RadioGroup>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>