<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LocationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".80"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".80"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="10dp"
            android:layout_height="0dp"
            android:layout_width="0dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textField"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:hint="@string/Location"
                    app:layout_constraintBottom_toTopOf="@+id/view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent=".15"
                    app:layout_constraintHorizontal_bias="0.505"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.324"
                    app:layout_constraintWidth_percent=".7">

                    <AutoCompleteTextView
                        android:id="@+id/textInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </AutoCompleteTextView>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:text="@string/confirm"
                    android:id="@+id/confirmButton"
                    style="?attr/materialButtonOutlinedStyle"
                    app:layout_constraintWidth_percent=".7"
                    app:layout_constraintHeight_percent=".15"
                    app:layout_constraintBottom_toTopOf="@+id/view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textField"
                    app:layout_constraintVertical_bias="0.171"></com.google.android.material.button.MaterialButton>

                <View
                    android:id="@+id/view"
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:background="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.673"
                    app:layout_constraintWidth_percent=".80" />

                <com.google.android.material.button.MaterialButton
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:text="@string/SearchGPS"
                    android:id="@+id/gpsLocator"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent=".15"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view"
                    app:layout_constraintWidth_percent=".7"></com.google.android.material.button.MaterialButton>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>